fix broken input heights in invite section

--- a/css/inner/builds.less
+++ b/css/inner/builds.less
@@ -539,6 +539,7 @@
           border-radius: 1em;
           box-shadow: none;
           transition: .3s;
+          height: @baseLineHeight;
           &:valid {
             + label {
               opacity: 0;
